[package]
name = "usnjrnl"
version = "0.1.0"
authors = ["Jan Starke <Jan.Starke@t-systems.com>"]
edition = "2018"
description = "parses a $UsnJrnl file"
homepage = "https://www.github.com/janstarke/usnjrnl"
license-file = "LICENSE"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mft = "0.5"
winstructs = "0.3.0"
log = "0.4"

## required to parse binary data
from_bytes = {version="0.2.1", features=["u8_arrays"]}
from_bytes_derive = "0.2.1"
memmap = "0.7"
packed_struct = "0.10"
byteorder = "1.4"
num-traits = "0.2"
num-derive = "0.3"
strum = { version = "0.22", features = ["derive"] }
strum_macros = "0.22"
chrono = "0.4"