[package]
name = "usnjrnl"
version = "0.2.0"
authors = ["Jan Starke <Jan.Starke@t-systems.com>"]
edition = "2018"
description = "parses a $UsnJrnl file"
homepage = "https://www.github.com/janstarke/usnjrnl"
license-file = "LICENSE"

[lib]
name="usnjrnl"
path="src/lib.rs"

[features]
default = ["usnjrnl_dump"]
usnjrnl_dump = ["clap", "anyhow", "simplelog", "bodyfile", "serde_json"]

[[bin]]
name="usnjrnl_dump"
path="src/main.rs"  
required-features = ["usnjrnl_dump"]

[dependencies]
mft = "0.5"
winstructs = "0.3.0"
log = "0.4"

## required to parse binary data
from_bytes = {version="0.2.2", features=["u8_arrays"]}
from_bytes_derive = "0.2.2"
memmap = "0.7"
packed_struct = "0.10"
byteorder = "1.4"
num-traits = "0.2"
num-derive = "0.3"
strum = { version = "0.22", features = ["derive"] }
strum_macros = "0.22"
chrono = "0.4"

bodyfile = {version="0.1", optional=true}
clap = {version="2", optional=true}
anyhow = {version="1.0", optional=true}
simplelog = {version="0.10", optional=true}
serde_json = {version="1.0", optional=true}